--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -23,6 +23,7 @@
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_marginTop="20dp"
+        android:elevation="6dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/ic_baseline_cancel_24"
         android:backgroundTint="@color/main_color"
