--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -23,10 +23,10 @@
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_marginTop="20dp"
-        android:elevation="6dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/ic_baseline_cancel_24"
         android:backgroundTint="@color/main_color"
+        android:elevation="6dp"
         android:gravity="center"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,6 +63,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:hint="@string/nick_name"
+        android:textColorHint="@color/light_grey"
         app:counterEnabled="true"
         app:counterMaxLength="10"
         app:endIconMode="clear_text"
@@ -79,6 +80,7 @@
             android:inputType="text"
             android:maxLength="10"
             android:maxLines="1"
+            android:textColorHint="@color/black"
             android:textSize="15sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -92,6 +94,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="24dp"
         android:hint="@string/amount_of_smoking"
+        android:textColorHint="@color/light_grey"
         app:counterEnabled="true"
         app:counterMaxLength="3"
         app:endIconMode="clear_text"
@@ -106,7 +109,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
-            android:maxLength="5"
+            android:maxLength="3"
             android:maxLines="1"
             android:textSize="15sp" />
 
@@ -121,6 +124,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="24dp"
         android:hint="@string/tobacco_price"
+        android:textColorHint="@color/light_grey"
         app:counterEnabled="true"
         app:counterMaxLength="5"
         app:endIconMode="clear_text"
@@ -135,7 +139,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
-            android:maxLength="10"
+            android:maxLength="5"
             android:maxLines="1"
             android:textSize="15sp" />
 
@@ -150,6 +154,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="24dp"
         android:hint="@string/resolution"
+        android:textColorHint="@color/light_grey"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:endIconMode="clear_text"
